# folkseconomy

./: README.md
backend/: package-lock.json  package.json  server.js
backend/database/: orbitdatabase.js
backend/models/: post.js
folkseconomy/: Cargo.toml
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  server.js
frontend/database/: mongodb.js  orbitdatabase.js
frontend/src/: lib.rs  main.rs
frontend/src/parts/: mod.rs
frontend/src/parts/components/: commentsection.rs  createaccount.rs  login.rs  mod.rs  web3login.rs
frontend/src/parts/fragments/: comment.rs  input.rs  mod.rs  wallet.rs
frontend/src/parts/pages/: mod.rs  notfound.rs  profile.rs  wallets.rs
frontend/src/parts/utils/: mod.rs  router.rs  session_storage.rs
frontend/src/parts/utils/wallets/: mod.rs
frontend/src/parts/utils/wallets/zcashmods/: zcash.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
